--- a/about.html
+++ b/about.html
@@ -10,19 +10,23 @@
 <body>
     
     <header>
-        <div class="container container-nav">
+        <div class="container container-nav"> 
+            <nav>
                 <div class="site-title ">
                     <h1>The IAP Reduction System</h1>
                     <p>This blog is intended to help people understand the effort of cooking on wood</p>
-                </div>  
-            <nav>
+                </div> 
                 <ul class="nav-list">
-                    <li class="nav-list-item"><a href="index.html">Home</a></li>
-                    <li class="nav-list-item"><a href="about.html" class="present_page">About</a></li>
-                    <li class="nav-list-item"><a href="#">Blog</a></li>
-                    <li class="nav-list-item"><a href="#">SigIn</a></li>
-                    <li class="nav-list-item"><a href="#">SignOut</a></li>
+                    <li class="nav-list-item"><a href="index.html" class="navbar-line">Home</a></li>
+                    <li class="nav-list-item"><a href="recent-post.html" class="navbar-line">Blog</a></li>
+                    <li class="nav-list-item"><a href="#" class="navbar-line">About</a></li>
+                    <li class="nav-list-item"><a href="#" class="navbar-line">SigIn</a><span><a href="registration.html" class="navbar-line">SignUp</a></span></li>
                 </ul>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>  
+                </div>
             </nav>
         </div>
 </header>
@@ -30,17 +34,17 @@
     <div class="container container-main">
         <main role="main">
 
-                <aside class="sidebar">
-                    <div class="sidebar-widget">
-                        <h2 class="widget-title"></h2>
-                        <img src="#" alt="" class="widget-image">
-                        <p class="widget-body"></p>
-                    </div>
+            <aside class="sidebar">
+                <div class="sidebar-widget">
+                    <h2 class="widget-title"></h2>
+                    <img src="#" alt="" class="widget-image">
+                    <p class="widget-body"></p>
+                </div>
 
-                    <div class="sidebar-widget">
-                        <h2 class="widget-title">xxxxxxxxx</h2>
-                        <div class="widget-recent-post">
-                            <h3 class="widget-recent-post-title">xxxxxxxxxxxxxx</h3>
+                <div class="sidebar-widget">
+                    <h2 class="widget-title">xxxxxxxxx</h2>
+                    <div class="widget-recent-post">
+                        <h3 class="widget-recent-post-title">xxxxxxxxxxxxxx</h3>
                             <img src="" alt=""class="widget-image">
                         </div>
 
@@ -55,11 +59,9 @@
                         </div>
                     </div>
 
-                </aside>
-
+            </aside>
+        </main>
     </div>
-</main>
-</div>
 
 
     <footer>
