--- a/registration.html
+++ b/registration.html
@@ -35,25 +35,34 @@
     <div class="container container-main">
             <main role="main">
 
-              
-                <article class="article-feature">
-                    <h2 class="article-title">The Rural Cooking Blog</h2>
-                    <img src="testpicture.jpg" alt="" class="article-image">
-                    <p class="article-info">July 23, 2023 | comments</p>
-                    <p class="article-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. In, nisi! Reprehenderit tenetur sunt voluptas accusamus est cupiditate totam cumque? Cumque amet aliquid repellendus quidem repellat possimus quibusdam repudiandae nisi omnis?</lorem:400>
-                    </p>
-                    <a href="" class="article-read-more">Read More</a>
-                </article>
+                <div class="user-reg">
+                <form action="registration" method="Post" class="form-bg">
+                    <h2>Rural Cooking User Registration Center</h2>
+                    <label for="fname">User Name:</label>
+                    <input type="text" id="username" name="username" class="input-field"><br><br>
+                    <label for="email">Email Address:</label>
+                    <input type="email" id="lname" name="useremail" class="input-field"><br><br>
+                    <label for="password">Enter Password:</label>
+                    <input type="password" id="password" name="password1" class="input-field"><br><br>
+                    <label for="password">Confirm Password:</label>
+                    <input type="password" id="password" name="password2" class="input-field"><br><br>
+
+                    <input type="submit" value="Submit">
+                  </form> 
+                </div>
+
 
             </main><!--end of main here-->
         </div>
 
 
-
+        <br>
+        <br>
+        <br>
     <footer>
         <p><strong>The Rural Cooking Blog</strong></p>
         <p>Copyright 2029</p>
     </footer>
-    <script src="ruralscript.js"></script>
+    <script src=”ruralscript.js”></script>
 </body>
 </html>
